--- a/plugin.yml
+++ b/plugin.yml
@@ -2,8 +2,8 @@ name: RPCore
 main: Narwhal\Main
 version: 0.0.1
 api: 3.0.0-ALPHA8
-load: POSTWORLD
 author: NickTehUnicorn
+load: POSTWORLD
 description: RPCore plugin by NarwhalPE
 commands:
  smsg:
@@ -12,7 +12,7 @@ commands:
  
  info:
   description: Get info about NarwhalPE
-  pernission: true
+  pernission: op
 permissions:
  smsg.use:
   default: op
